refactor: IDE auto code cleanup